
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int force_exploit ;

void cond_exit(int exitcode) {
    if (!force_exploit)
        exit(exitcode);
}
